k8s/deployment-django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-django-app
  namespace: f1project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f1-django
  template:
    metadata:
      labels:
        app: f1-django
    spec:
      containers:
      - name: f1-django-container
        image: teodoranikolovska/f1djangoapp:latest
        ports:
        - containerPort: 8000
