k8s/statefulset-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: f1-postgres
  namespace: f1project
spec:
  serviceName: "f1-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: f1-postgres
  template:
    metadata:
      labels:
        app: f1-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
