k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-django-ingress
  namespace: f1project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: f1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f1-django-service
            port:
              number: 8000
